--- a/qwatch/pyproject.toml
+++ b/qwatch/pyproject.toml
@@ -1,6 +1,7 @@
 [tool.poetry]
 name = "qwatch"
 version = "0.2.0"
+license = "MIT"
 description = """The qwatch package was developed with pbs_version = 14.1.0 using the Mississippi Center for
 Computational Research (MCSR).  Its primary function is to parse qstat -f data over time.  The data and plots
 produced allow the user to make smarter decision regarding resource allocation for downstream batch jobs."""
@@ -27,7 +28,7 @@ classifiers = [
     ]
 
 [tool.poetry.dependencies]
-python = "*"
+python = "^3.6"
 click = "^6.7"
 pandas = "^0.22.0"
 pyaml = "^17.12"
