--- a/qwatch/pyproject.toml
+++ b/qwatch/pyproject.toml
@@ -36,5 +36,5 @@ pyaml = "^17.12"
 [tool.poetry.dev-dependencies]
 pytest = "^3.5"
 
-[scripts]
-qwatch = 'qwatch:cli'
+[tool.poetry.scripts]
+qwatch = 'qwatch.cli:qwatch'
